...
              <Button
                onPress={() => onSubmit(password)}
                disabled={!password}
                loading={busy}
                style={styles.flex}
              >
                Continue
              </Button>
            </View>
          </View>
        </View>
      </KeyboardAvoidingView>
    </Modal>
...
